deps: add missing dev dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,9 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "autora-core[dev]"
+    "autora-core[dev]",
+    "autora-theorist-bms",
+    "autora-theorist-darts"
 ]
 
 [project.urls]
